<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaaaaa"
    tools:context="com.ck.ind.finddir.StartActivity">


    <com.ck.ind.finddir.play.MySurfacePlayView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/mysurface_view_start" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/radius_bg"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="140dp"
            android:layout_margin="5dp"
            android:layout_height="30dp"
            android:textSize="14dp"
            android:id="@+id/btn_continuegame"
            android:background="@drawable/icon_sys_myth"
            android:text="@string/continue_val"
         />
        <Button
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:textSize="14dp"
            android:id="@+id/btn_newgame"
            android:background="@drawable/icon_sys_myth"
            android:text="@string/newgame_val"
         />
        <Button
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:textSize="14dp"
            android:id="@+id/btn_challenge"
            android:background="@drawable/icon_sys_myth"
            android:text="@string/challenge_val" />
        <Button
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:textSize="14dp"
            android:background="@drawable/icon_sys_myth"
            android:id="@+id/btn_about"
            android:text="@string/about"
            />
        <Button
            android:layout_margin="5dp"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:textSize="14dp"
            android:background="@drawable/icon_sys_myth"
            android:id="@+id/btn_quitgame"
            android:text="@string/quit"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:textSize="35dp"
        android:layout_marginStart="30dp"
        android:text="@string/game_title"
        android:layout_marginTop="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version_show"
        android:textSize="15dp"
        android:text="@string/game_version"
        android:layout_below="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TTTTT"
        android:paddingRight="5dp"
        android:id="@+id/gos_number"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/editText"
        android:layout_toLeftOf="@+id/linearLayout"
        android:layout_toStartOf="@+id/linearLayout" />

</RelativeLayout>
