<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bgDialog"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="#0000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/ImageView01_sel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/abc_btn_radio_material" />

        <TextView
            android:id="@+id/title01_sel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textColor="#ffe9feff"
            android:textSize="20dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/Sel_ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:background="#0000" >

        <TextView
            android:id="@+id/Sel_TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:textColor="#ffe9feff" >
        </TextView>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff3333"
            android:textStyle="bold"
            android:background="@drawable/abc_item_background_holo_light"
            android:text="@string/ok"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/cancel_btn"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:background="@drawable/abc_item_background_holo_light"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:autoText="false" />

    </LinearLayout>


</LinearLayout>
